# app/Http/Controllers/API/V1/Auth/LoginController.php
@@ -8,6 +8,9 @@ use App\Models\User;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Support\Facades\Hash;
 
+/**
+ * @group Auth endpoints
+ */
 class LoginController extends Controller
 {
     /**
