# public/docs/openapi.yaml
@@ -7,6 +7,248 @@ servers:
   -
     url: 'http://localhost'
 paths:
+  /api/v1/admin/travels:
+    post:
+      summary: 'POST Travel'
+      operationId: pOSTTravel
+      description: 'Creates a new Travel record.'
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: '{"data":{"id":"996a36ca-2693-4901-9c55-7136e68d81d5","name":"My new travel 234","slug":"my-new-travel-234", ...}'
+        422:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'The name has already been taken.'
+                  errors:
+                    name:
+                      - 'The name has already been taken.'
+                properties:
+                  message:
+                    type: string
+                    example: 'The name has already been taken.'
+                  errors:
+                    type: object
+                    properties:
+                      name:
+                        type: array
+                        example:
+                          - 'The name has already been taken.'
+                        items:
+                          type: string
+      tags:
+        - 'Admin endpoints'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                is_public:
+                  type: boolean
+                  description: ''
+                  example: true
+                name:
+                  type: string
+                  description: ''
+                  example: sed
+                description:
+                  type: string
+                  description: ''
+                  example: et
+                number_of_days:
+                  type: integer
+                  description: ''
+                  example: 14
+              required:
+                - name
+                - description
+                - number_of_days
+  '/api/v1/admin/travels/{travel_id}':
+    put:
+      summary: 'PUT Travel'
+      operationId: pUTTravel
+      description: 'Updates new Travel record.'
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            text/plain:
+              schema:
+                type: string
+                example: '{"data":{"id":"996a36ca-2693-4901-9c55-7136e68d81d5","name":"My new travel 234", ...}'
+        422:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: 'The name has already been taken.'
+                  errors:
+                    name:
+                      - 'The name has already been taken.'
+                properties:
+                  message:
+                    type: string
+                    example: 'The name has already been taken.'
+                  errors:
+                    type: object
+                    properties:
+                      name:
+                        type: array
+                        example:
+                          - 'The name has already been taken.'
+                        items:
+                          type: string
+      tags:
+        - 'Admin endpoints'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                is_public:
+                  type: boolean
+                  description: ''
+                  example: true
+                name:
+                  type: string
+                  description: ''
+                  example: sequi
+                description:
+                  type: string
+                  description: ''
+                  example: nisi
+                number_of_days:
+                  type: integer
+                  description: ''
+                  example: 14
+              required:
+                - name
+                - description
+                - number_of_days
+    parameters:
+      -
+        in: path
+        name: travel_id
+        description: 'The ID of the travel.'
+        example: 995c2795-e8f7-4ff9-ab2a-5a6e0feb55bb
+        required: true
+        schema:
+          type: string
+  /api/v1/login:
+    post:
+      summary: 'POST Login'
+      operationId: pOSTLogin
+      description: 'Login with the existing user.'
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  access_token: 1|a9ZcYzIrLURVGx6Xe41HKj1CrNsxRxe4pLA2oISo
+                properties:
+                  access_token:
+                    type: string
+                    example: 1|a9ZcYzIrLURVGx6Xe41HKj1CrNsxRxe4pLA2oISo
+        422:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  error: 'The provided credentials are incorrect.'
+                properties:
+                  error:
+                    type: string
+                    example: 'The provided credentials are incorrect.'
+      tags:
+        - 'Auth endpoints'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: 'Must be a valid email address.'
+                  example: bauch.araceli@example.com
+                password:
+                  type: string
+                  description: ''
+                  example: "~'p?5F4y4)s$42l;"
+              required:
+                - email
+                - password
+      security: []
+  '/api/v1/admin/travels/{travel_id}/tours':
+    post:
+      summary: ''
+      operationId: postApiV1AdminTravelsTravel_idTours
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - Endpoints
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: ''
+                  example: eligendi
+                starting_date:
+                  type: string
+                  description: 'Must be a valid date.'
+                  example: '2023-06-16T06:41:27'
+                ending_date:
+                  type: string
+                  description: 'Must be a valid date. Must be a date after <code>starting_date</code>.'
+                  example: '2054-08-05'
+                price:
+                  type: number
+                  description: ''
+                  example: 34697.36516
+              required:
+                - name
+                - starting_date
+                - ending_date
+                - price
+      security: []
+    parameters:
+      -
+        in: path
+        name: travel_id
+        description: 'The ID of the travel.'
+        example: 995c2795-e8f7-4ff9-ab2a-5a6e0feb55bb
+        required: true
+        schema:
+          type: string
   /api/v1/travels:
     get:
       summary: 'GET Travels'
@@ -32,7 +274,7 @@ paths:
                 type: string
                 example: '{"data":[{"id":"9958e389-5edf-48eb-8ecd-e058985cf3ce","name":"First travel", ...}}'
       tags:
-        - Endpoints
+        - 'Public endpoints'
       security: []
   '/api/v1/travels/{travel_slug}/tours':
     get:
@@ -772,7 +1014,7 @@ paths:
                           type: string
                           example: '->'
       tags:
-        - Endpoints
+        - 'Public endpoints'
       requestBody:
         required: false
         content:
@@ -783,19 +1025,19 @@ paths:
                 priceFrom:
                   type: number
                   description: ''
-                  example: 86862814.8039
+                  example: 118926637.09187
                 priceTo:
                   type: number
                   description: ''
-                  example: 758.0
+                  example: 2714.0
                 dateFrom:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2023-06-16T06:36:53'
+                  example: '2023-06-16T06:41:26'
                 dateTo:
                   type: string
                   description: 'Must be a valid date.'
-                  example: '2023-06-16T06:36:53'
+                  example: '2023-06-16T06:41:26'
                 sortBy:
                   type: string
                   description: 'Must be one of <code>price</code>.'
@@ -814,249 +1056,16 @@ paths:
         required: true
         schema:
           type: string
-  /api/v1/admin/travels:
-    post:
-      summary: 'POST Travel'
-      operationId: pOSTTravel
-      description: 'Creates a new Travel record.'
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: '{"data":{"id":"996a36ca-2693-4901-9c55-7136e68d81d5","name":"My new travel 234","slug":"my-new-travel-234", ...}'
-        422:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: 'The name has already been taken.'
-                  errors:
-                    name:
-                      - 'The name has already been taken.'
-                properties:
-                  message:
-                    type: string
-                    example: 'The name has already been taken.'
-                  errors:
-                    type: object
-                    properties:
-                      name:
-                        type: array
-                        example:
-                          - 'The name has already been taken.'
-                        items:
-                          type: string
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                is_public:
-                  type: boolean
-                  description: ''
-                  example: true
-                name:
-                  type: string
-                  description: ''
-                  example: voluptatem
-                description:
-                  type: string
-                  description: ''
-                  example: sint
-                number_of_days:
-                  type: integer
-                  description: ''
-                  example: 7
-              required:
-                - name
-                - description
-                - number_of_days
-  '/api/v1/admin/travels/{travel_id}/tours':
-    post:
-      summary: ''
-      operationId: postApiV1AdminTravelsTravel_idTours
-      description: ''
-      parameters: []
-      responses: {  }
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                name:
-                  type: string
-                  description: ''
-                  example: nihil
-                starting_date:
-                  type: string
-                  description: 'Must be a valid date.'
-                  example: '2023-06-16T06:36:53'
-                ending_date:
-                  type: string
-                  description: 'Must be a valid date. Must be a date after <code>starting_date</code>.'
-                  example: '2111-03-26'
-                price:
-                  type: number
-                  description: ''
-                  example: 133.0
-              required:
-                - name
-                - starting_date
-                - ending_date
-                - price
-      security: []
-    parameters:
-      -
-        in: path
-        name: travel_id
-        description: 'The ID of the travel.'
-        example: 995c2795-e8f7-4ff9-ab2a-5a6e0feb55bb
-        required: true
-        schema:
-          type: string
-  '/api/v1/admin/travels/{travel_id}':
-    put:
-      summary: 'PUT Travel'
-      operationId: pUTTravel
-      description: 'Updates new Travel record.'
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            text/plain:
-              schema:
-                type: string
-                example: '{"data":{"id":"996a36ca-2693-4901-9c55-7136e68d81d5","name":"My new travel 234", ...}'
-        422:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  message: 'The name has already been taken.'
-                  errors:
-                    name:
-                      - 'The name has already been taken.'
-                properties:
-                  message:
-                    type: string
-                    example: 'The name has already been taken.'
-                  errors:
-                    type: object
-                    properties:
-                      name:
-                        type: array
-                        example:
-                          - 'The name has already been taken.'
-                        items:
-                          type: string
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                is_public:
-                  type: boolean
-                  description: ''
-                  example: true
-                name:
-                  type: string
-                  description: ''
-                  example: mollitia
-                description:
-                  type: string
-                  description: ''
-                  example: natus
-                number_of_days:
-                  type: integer
-                  description: ''
-                  example: 1
-              required:
-                - name
-                - description
-                - number_of_days
-    parameters:
-      -
-        in: path
-        name: travel_id
-        description: 'The ID of the travel.'
-        example: 995c2795-e8f7-4ff9-ab2a-5a6e0feb55bb
-        required: true
-        schema:
-          type: string
-  /api/v1/login:
-    post:
-      summary: 'POST Login'
-      operationId: pOSTLogin
-      description: 'Login with the existing user.'
-      parameters: []
-      responses:
-        200:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  access_token: 1|a9ZcYzIrLURVGx6Xe41HKj1CrNsxRxe4pLA2oISo
-                properties:
-                  access_token:
-                    type: string
-                    example: 1|a9ZcYzIrLURVGx6Xe41HKj1CrNsxRxe4pLA2oISo
-        422:
-          description: ''
-          content:
-            application/json:
-              schema:
-                type: object
-                example:
-                  error: 'The provided credentials are incorrect.'
-                properties:
-                  error:
-                    type: string
-                    example: 'The provided credentials are incorrect.'
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  description: 'Must be a valid email address.'
-                  example: schulist.hassan@example.org
-                password:
-                  type: string
-                  description: ''
-                  example: P(L4s(l
-              required:
-                - email
-                - password
-      security: []
 tags:
   -
+    name: 'Admin endpoints'
+    description: ''
+  -
+    name: 'Auth endpoints'
+    description: ''
+  -
     name: Endpoints
+    description: ''
+  -
+    name: 'Public endpoints'
     description: ''
